--- a/Bookkeeping/Bookkeeping/Views/Home/Index.cshtml
+++ b/Bookkeeping/Bookkeeping/Views/Home/Index.cshtml
@@ -1,6 +1,8 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+@model PagedList.IPagedList<Bookkeeping.Models.ViewModels.RecordDataViewModel>
+@using PagedList.Mvc;
 
 <div class="well">
     <form class="form-horizontal">
