--- a/Bookkeeping/Bookkeeping/Views/Shared/_Layout.cshtml
+++ b/Bookkeeping/Bookkeeping/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - 我的記帳本</title>
     <link href="http://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+    @RenderSection("head", required: false)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -26,16 +27,17 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div><br /><br />
     <div class="container body-content">
         @RenderBody()
+        </div>
+    @RenderSection("scripts", required: false)
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - <a href="#">SkillTree</a></p>
         </footer>
-    </div>
     <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-2.2.1.min.js"></script>
     <script src="http://ajax.aspnetcdn.com/ajax/bootstrap/3.3.6/bootstrap.min.js"></script>
-    @RenderSection("scripts", required: false)
+
 </body>
 </html>
